fixed overflow

--- a/src/components/intro/intro.css
+++ b/src/components/intro/intro.css
@@ -45,8 +45,8 @@
 }
 
 .computers {
-  height: 300px;
-  margin-bottom: -40px;
+  height: 220px;
+  margin-bottom: -30px;
   margin-top: 50px;
 }
 
