--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,3 @@
   box-sizing: border-box;
   font-family: Helvetica, Arial, sans-serif;
 }
-
-html {
-  scroll-behavior: smooth;
-}
